fix header height bug on mobile

--- a/dev/styleSheet.css
+++ b/dev/styleSheet.css
@@ -53,7 +53,6 @@ p {
   background-color: rgba(34, 36, 42, 0.84) ;
   top: 0;
   z-index: 999;
-  
 }
 
 #headerNav{
@@ -502,6 +501,10 @@ cursor: pointer;
     "four"
     "five"
   }
+
+  #main-header{
+    height: 0;
+  }
 }
 
 @media screen and (min-width: 40rem) {
@@ -631,6 +634,10 @@ a:link {
 /* Media query for screen */
 
 @media (hover: none) {
+
+  #main-header{
+    height: 0;
+  }
 
  #hero-text{
     font-size: 2em;
